--- a/src/config/chignolin_implicit/tae.yaml
+++ b/src/config/chignolin_implicit/tae.yaml
@@ -2,9 +2,9 @@ defaults:
   - base
 
 model:
-  name: rmsd
+  name: tae
 
 logger:
   tags:
-  - chignolin
-  - rmsd
+  - chignolin_implicit
+  - tae
