--- a/environment.yaml
+++ b/environment.yaml
@@ -1,7 +1,7 @@
 name: mlcv
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
@@ -29,10 +29,12 @@ dependencies:
   - cftime=1.6.4=py39hd92a3bb_0
   - chardet=5.2.0=py39hf3d152e_1
   - compilers=1.5.2=ha770c72_0
+  - contourpy=1.3.0=py39h74842e3_2
   - cuda-version=11.8=h70ddcb2_3
   - cudatoolkit=11.8.0=h6a678d5_0
   - cudnn=8.9.7.29=hbc23b4c_3
   - cxx-compiler=1.5.2=hf52228f_0
+  - cycler=0.12.1=pyhd8ed1ab_1
   - cython=3.0.10=py39h5eee18b_0
   - expat=2.6.2=h59595ed_0
   - fftw=3.3.10=nompi_hf1063bd_110
@@ -43,6 +45,7 @@ dependencies:
   - fontconfig=2.14.2=h14ed4e7_0
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
+  - fonttools=4.59.1=py39heb7d2ae_0
   - fortran-compiler=1.5.2=hdb1a99f_0
   - freetype=2.12.1=h4a9f257_0
   - freetype-py=2.3.0=pyhd8ed1ab_0
@@ -77,13 +80,17 @@ dependencies:
   - hdf4=4.2.15=h9772cbc_5
   - hdf5=1.14.3=nompi_h4f84152_101
   - icu=73.2=h59595ed_0
+  - importlib-metadata=8.2.0=pyha770c72_0
   - importlib_metadata=8.2.0=hd8ed1ab_0
   - importlib_resources=6.4.0=py39h06a4308_0
+  - jax=0.4.27=pyhd8ed1ab_0
+  - jaxlib=0.4.23=cuda118py39h04eafb8_202
   - jinja2=3.1.4=py39h06a4308_0
   - joblib=1.4.2=py39h06a4308_0
   - jpeg=9e=h0b41bf4_3
   - kernel-headers_linux-64=3.10.0=h57e8cba_10
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.7=py39h74842e3_0
   - krb5=1.21.3=h659f571_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
@@ -148,15 +155,18 @@ dependencies:
   - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_1
   - lzo=2.10=hd590300_1001
+  - markupsafe=3.0.2=py39h9399b63_1
   - matplotlib-base=3.7.1=py39h417a72b_1
   - mdtraj=1.9.6=py39h138c130_1
   - ml_dtypes=0.4.0=py39hfc16268_1
   - mock=5.1.0=pyhd8ed1ab_0
   - mpfr=4.2.1=h38ae2d0_2
   - mpiplus=v0.0.2=pyhd8ed1ab_0
+  - munkres=1.1.4=pyhd8ed1ab_1
   - nccl=2.22.3.1=hee583db_0
   - ncurses=6.4=h6a678d5_0
   - netcdf-fortran=4.6.1=nompi_h228c76a_104
+  - netcdf4=1.6.5=nompi_py39h7437241_102
   - ninja=1.12.1=h06a4308_0
   - ninja-base=1.12.1=hdb19cb5_0
   - nomkl=1.0=h5ca1d4c_0
@@ -168,17 +178,22 @@ dependencies:
   - numpy-base=1.26.4=py39h8a23956_0
   - ocl-icd=2.3.2=hd590300_1
   - ocl-icd-system=1.0.0=1
+  - openblas=0.3.25=pthreads_h7a3da1a_0
   - openjpeg=2.4.0=h9ca470c_2
+  - openmm=8.2.0=py39h512e862_2
   - openmmtools=0.20.0=py39h3811e60_1
   - openssl=3.5.0=h7b32b05_0
   - opt-einsum=3.3.0=hd8ed1ab_2
   - opt_einsum=3.3.0=pyhc1e730c_2
+  - packaging=25.0=pyh29332c3_1
+  - pandas=2.3.1=py39h1b6b32d_0
   - pango=1.50.7=h05da053_0
   - parmed=4.2.2=py39h3d6467e_1
   - pcre2=10.43=hcad00b1_0
   - pdbfixer=1.9=pyh1a96a4e_0
   - perl=5.34.0=h5eee18b_2
   - pillow=10.4.0=py39h5eee18b_0
+  - pip=25.2=pyh8b19718_0
   - pixman=0.43.2=h59595ed_0
   - poppler=22.12.0=h9614445_3
   - poppler-data=0.4.11=h06a4308_1
@@ -190,6 +205,7 @@ dependencies:
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pytables=3.9.2=py39hd99417c_2
   - python=3.9.19=h955ad1f_1
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - python_abi=3.9=2_cp39
   - pytz=2024.1=pyhd8ed1ab_0
@@ -209,6 +225,7 @@ dependencies:
   - tk=8.6.14=h39e8969_0
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
+  - tzdata=2025b=h78e105d_0
   - unicodedata2=15.1.0=py39h5eee18b_0
   - wheel=0.43.0=py39h06a4308_0
   - xdrfile=1.1.4=h7f98852_1
@@ -226,249 +243,187 @@ dependencies:
   - xorg-xproto=7.0.31=h27cfd23_1007
   - xz=5.4.6=h5eee18b_1
   - yaml=0.2.5=h7f98852_2
+  - zipp=3.23.0=pyhd8ed1ab_0
   - zlib=1.2.13=h4ab18f5_6
   - zlib-ng=2.0.7=h5eee18b_0
   - zstd=1.5.5=hc292b87_2
   - pip:
-      - accelerate==0.34.0
-      - aiohttp==3.9.5
-      - aiosignal==1.3.1
+      - absl-py==2.3.1
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.12.15
+      - aiosignal==1.4.0
       - amberutils==21.0
-      - anyio==4.4.0
-      - argon2-cffi==23.1.0
-      - argon2-cffi-bindings==21.2.0
+      - annotated-types==0.7.0
+      - antlr4-python3-runtime==4.9.3
+      - anyio==4.10.0
+      - argon2-cffi==25.1.0
+      - argon2-cffi-bindings==25.1.0
       - arrow==1.3.0
-      - ase==3.23.0
-      - asttokens==2.4.1
-      - async-lru==2.0.4
-      - async-timeout==4.0.3
-      - attrs==23.2.0
-      - babel==2.15.0
-      - bayesian-optimization==1.5.1
-      - beautifulsoup4==4.12.3
-      - bgmol==0.1.0+31.g2be2ede
-      - bleach==6.1.0
-      - blosc2==2.5.1
-      - cachetools==5.3.3
-      - cffi==1.16.0
-      - charset-normalizer==3.3.2
-      - click==8.1.7
-      - cloudpickle==3.0.0
-      - colorama==0.4.6
-      - comm==0.2.2
-      - contourpy==1.2.1
-      - cycler==0.12.1
-      - datasets==3.5.1
-      - debugpy==1.8.2
-      - decorator==4.4.2
-      - deeptime==0.4.4
+      - asttokens==3.0.0
+      - async-lru==2.0.5
+      - async-timeout==5.0.1
+      - attrs==25.3.0
+      - babel==2.17.0
+      - beautifulsoup4==4.13.5
+      - bleach==6.2.0
+      - cachetools==5.5.2
+      - cffi==2.0.0
+      - charset-normalizer==3.4.3
+      - click==8.1.8
+      - comm==0.2.3
+      - debugpy==1.8.16
+      - decorator==5.2.1
+      - deeptime==0.4.5
       - defusedxml==0.7.1
       - dill==0.4.0
-      - docker-pycreds==0.4.0
       - edgembar==0.2
-      - egnn-pytorch==0.2.7
-      - einops==0.8.0
-      - et-xmlfile==1.1.0
-      - exceptiongroup==1.2.1
-      - executing==2.0.1
-      - fasteners==0.19
-      - fastjsonschema==2.20.0
-      - filelock==3.15.4
-      - flatbuffers==24.3.25
-      - flax==0.8.5
-      - fonttools==4.53.0
+      - eval-type-backport==0.2.2
+      - exceptiongroup==1.3.0
+      - executing==2.2.1
+      - fastjsonschema==2.21.2
+      - filelock==3.19.1
+      - flatbuffers==25.2.10
       - fqdn==1.5.1
-      - frozenlist==1.4.1
-      - fsspec==2024.5.0
-      - future==1.0.0
+      - frozenlist==1.7.0
+      - fsspec==2025.9.0
       - gast==0.4.0
-      - gitdb==4.0.11
-      - gitpython==3.1.43
+      - gitdb==4.0.12
+      - gitpython==3.1.45
+      - google-auth==2.40.3
       - google-auth-oauthlib==0.4.6
       - google-pasta==0.2.0
-      - griddataformats==1.0.2
-      - grpcio==1.64.1
-      - h11==0.14.0
-      - h5py==3.11.0
-      - httpcore==1.0.5
-      - httpx==0.27.0
-      - huggingface-hub==0.30.2
-      - idna==3.7
-      - imageio==2.35.1
-      - imageio-ffmpeg==0.5.1
-      - importlib-metadata==8.0.0
-      - iniconfig==2.0.0
-      - ipykernel==6.29.5
+      - grpcio==1.74.0
+      - h11==0.16.0
+      - h5py==3.14.0
+      - httpcore==1.0.9
+      - httpx==0.28.1
+      - hydra-core==1.3.2
+      - idna==3.10
+      - ipykernel==6.30.1
       - ipython==8.18.1
-      - ipython-genutils==0.2.0
-      - ipywidgets==8.1.7
       - isoduration==20.11.0
-      - jax==0.4.30
-      - jax-cuda12-pjrt==0.4.30
-      - jax-cuda12-plugin==0.4.30
-      - jaxlib==0.4.27+cuda12.cudnn89
-      - jedi==0.19.1
-      - json5==0.9.25
+      - jedi==0.19.2
+      - json5==0.12.1
       - jsonpointer==3.0.0
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2023.12.1
-      - jupyter-client==8.6.2
-      - jupyter-core==5.7.2
-      - jupyter-events==0.10.0
-      - jupyter-lsp==2.2.5
-      - jupyter-server==2.14.2
+      - jsonschema==4.25.1
+      - jsonschema-specifications==2025.9.1
+      - jupyter-client==8.6.3
+      - jupyter-core==5.8.1
+      - jupyter-events==0.12.0
+      - jupyter-lsp==2.3.0
+      - jupyter-server==2.17.0
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.2.3
+      - jupyterlab==4.4.7
       - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.27.2
-      - jupyterlab-widgets==3.0.15
-      - kdepy==1.1.9
+      - jupyterlab-server==2.27.3
+      - kdepy==1.1.12
       - keras==2.10.0
       - keras-preprocessing==1.1.2
-      - kiwisolver==1.4.5
-      - lazy-loader==0.4
+      - lark==1.2.2
       - libclang==18.1.1
-      - lightning==2.3.1
-      - lightning-utilities==0.11.3.post0
-      - llvmlite==0.43.0
-      - lmdb==1.6.2
-      - markdown==3.6
-      - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
-      - matplotlib==3.9.0
+      - lightning==2.5.5
+      - lightning-utilities==0.15.2
+      - markdown==3.9
       - matplotlib-inline==0.1.7
-      - mda-xdrlib==0.2.0
-      - mdanalysis==2.7.0
-      - mdurl==0.1.2
-      - mistune==3.0.2
-      - mlcolvar==1.0.0+1153.g2200f6b
+      - mistune==3.1.4
+      - mlcolvar==1.2.2
       - mmpbsa-py==16.0
-      - mmtf-python==1.1.3
-      - moviepy==0.2.2.11
       - mpmath==1.3.0
-      - mrcfile==1.5.3
-      - msgpack==1.0.8
-      - multidict==6.0.5
-      - multimethod==2.0
+      - multidict==6.6.4
       - multiprocess==0.70.18
-      - natsort==8.4.0
-      - nbclient==0.10.0
-      - nbconvert==7.16.4
+      - nbclient==0.10.2
+      - nbconvert==7.16.6
       - nbformat==5.10.4
-      - ndindex==1.8
       - nest-asyncio==1.6.0
-      - netcdf4==1.7.1.post1
       - networkx==3.2.1
-      - nflows==0.14
-      - nglview==3.1.4
-      - nnucleate==0.0.1
-      - notebook==7.2.1
       - notebook-shim==0.2.4
-      - numba==0.60.0
-      - nvidia-cuda-nvcc-cu12==12.6.68
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
       - nvidia-cudnn-cu12==8.9.2.26
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
       - nvidia-nccl-cu12==2.19.3
-      - openmm==8.1.1
-      - openpathsampling==1.6.0
-      - openpyxl==3.1.5
-      - orbax-checkpoint==0.5.23
+      - nvidia-nvjitlink-cu12==12.9.86
+      - nvidia-nvtx-cu12==12.1.105
+      - oauthlib==3.3.1
+      - omegaconf==2.3.0
       - overrides==7.7.0
-      - packaging==24.2
       - packmol-memgen==2024.2.9
-      - pandas==2.2.2
       - pandocfilters==1.5.1
-      - parso==0.8.4
-      - pathos==0.3.3
-      - pdb-numpy==0.0.11
+      - parso==0.8.5
+      - pathos==0.3.4
       - pdb4amber==22.0
       - pexpect==4.9.0
-      - pip==25.1.1
-      - platformdirs==4.2.2
-      - pluggy==1.5.0
-      - pox==0.3.5
-      - ppft==1.7.6.9
-      - proglog==0.1.10
-      - prometheus-client==0.20.0
-      - prompt-toolkit==3.0.47
+      - platformdirs==4.4.0
+      - pox==0.3.6
+      - ppft==1.7.7
+      - prometheus-client==0.22.1
+      - prompt-toolkit==3.0.52
+      - propcache==0.3.2
       - protobuf==3.19.6
-      - psutil==6.0.0
+      - psutil==7.0.0
       - ptyprocess==0.7.0
-      - pure-eval==0.2.2
-      - pyarrow==17.0.0
-      - pyarrow-hotfix==0.6
-      - pyasn1==0.6.0
-      - pyasn1-modules==0.4.0
-      - pycparser==2.22
-      - pydot==3.0.2
+      - pure-eval==0.2.3
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.2
+      - pycparser==2.23
+      - pydantic==2.11.9
+      - pydantic-core==2.33.2
       - pyemma==2.5.12
-      - pygments==2.18.0
+      - pygments==2.19.2
       - pymsmt==22.0
-      - pytest==8.2.2
-      - python-dateutil==2.9.0.post0
-      - python-graphviz==0.20.3
-      - python-json-logger==2.0.7
-      - pytorch-lightning==2.3.1
+      - python-json-logger==3.3.0
+      - pytorch-lightning==2.5.5
       - pytraj==2.0.6
-      - pyzmq==26.0.3
-      - referencing==0.35.1
-      - requests==2.32.3
+      - pyzmq==27.1.0
+      - referencing==0.36.2
+      - requests==2.32.5
+      - requests-oauthlib==2.0.0
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
-      - rich==13.7.1
-      - rpds-py==0.19.0
-      - rsa==4.9
-      - safetensors==0.4.4
+      - rfc3987-syntax==1.1.0
+      - rpds-py==0.27.1
+      - rsa==4.9.1
       - sander==22.0
-      - scikit-image==0.24.0
-      - scikit-learn==1.5.0
+      - scikit-learn==1.6.1
       - seaborn==0.13.2
       - send2trash==1.8.3
-      - sentry-sdk==2.10.0
-      - setproctitle==1.3.3
-      - smmap==5.0.1
+      - sentry-sdk==2.38.0
+      - smmap==5.0.2
       - sniffio==1.3.1
-      - soupsieve==2.5
+      - soupsieve==2.8
       - stack-data==0.6.3
-      - svgwrite==1.4.3
-      - sympy==1.12.1
-      - tabulate==0.9.0
-      - tae==0.1.4.dev16+gc88ed3f
+      - sympy==1.14.0
       - tensorboard==2.10.1
       - tensorboard-data-server==0.6.1
       - tensorboard-plugin-wit==1.8.1
-      - tensorflow-addons==0.23.0
       - tensorflow-estimator==2.10.0
       - tensorflow-gpu==2.10.0
       - tensorflow-io-gcs-filesystem==0.37.1
-      - tensorstore==0.1.63
-      - termcolor==2.5.0
+      - termcolor==3.1.0
       - terminado==0.18.1
-      - threadpoolctl==3.5.0
-      - tifffile==2024.8.30
-      - tinycss2==1.3.0
-      - tomli==2.0.1
+      - threadpoolctl==3.6.0
+      - tinycss2==1.4.0
+      - tomli==2.2.1
       - torch==2.2.2
-      - torch-scatter==2.1.2+pt22cu121
-      - torchmetrics==1.4.0.post0
-      - torchviz==0.0.3
-      - tornado==6.4.1
-      - tqdm==4.66.4
+      - torchmetrics==1.8.2
+      - tornado==6.5.2
       - traitlets==5.14.3
       - triton==2.2.0
-      - typeguard==2.13.3
-      - types-python-dateutil==2.9.0.20240316
-      - tzdata==2024.1
-      - ujson==5.10.0
+      - types-python-dateutil==2.9.0.20250822
+      - typing-inspection==0.4.1
       - uri-template==1.3.0
-      - urllib3==2.2.2
-      - wandb==0.18.1
+      - urllib3==2.5.0
+      - wandb==0.21.4
       - wcwidth==0.2.13
-      - webcolors==24.6.0
+      - webcolors==24.11.1
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - werkzeug==3.0.3
-      - widgetsnbextension==4.0.14
-      - wrapt==1.16.0
-      - xxhash==3.4.1
-      - yarl==1.9.4
-      - zipp==3.19.2
+      - werkzeug==3.1.3
+      - wrapt==1.17.3
+      - yarl==1.20.1
+prefix: /home/kiyoung/miniforge3/envs/mlcv
