Enhance analysis notebook with updated molecule and method configurations, improved plotting capabilities, and refined data loading functions. Adjust simulation parameters and streamline metric collection processes. Update environment configuration and fix paths in base YAML files for consistency.

--- a/src/config/chignolin/base.yaml
+++ b/src/config/chignolin/base.yaml
@@ -2,7 +2,7 @@
 model:
   name: null
   checkpoint: True
-  checkpoint_path: /home/kiyoung/tlc/models
+  checkpoint_path: models
   descriptor: pairwise_distance
 
 # Logger configuration  
@@ -23,7 +23,7 @@ rmsd_threshold: 10 # angstrom
 
 # Simulation configuration
 simulation:
-  k: 10000  # Default value, can be overridden
+  k: 2000  # Default value, can be overridden
   timestep: 1
   num_steps: 100000
   friction: 0.001
